--- a/index.html
+++ b/index.html
@@ -37,14 +37,26 @@
 
             // Create the scene space
             var scene = new BABYLON.Scene(engine);
+            scene.clearColor = new BABYLON.Color3(0, 0, 0);
+            scene.fogMode = BABYLON.Scene.FOGMODE_EXP;
+            scene.fogDensity = 0.006;
+            scene.fogStart = 10000;
+            scene.fogEnd = 100000;
 
             // Add a camera to the scene and attach it to the canvas
-            var camera = new BABYLON.ArcRotateCamera("Camera", Math.PI /2, Math.PI / 2, 2, new BABYLON.Vector3(0,0,-1), scene);
+            var camera = new BABYLON.ArcRotateCamera("Camera", Math.PI /2, Math.PI / 2, 800, new BABYLON.Vector3.Zero(), scene);
             camera.attachControl(canvas, true);
+            camera.useAutoRotationBehavior = true;
 
             // Add lights to the scene
             var light1 = new BABYLON.HemisphericLight("light1", new BABYLON.Vector3(1, 1, 0), scene);
-            var light2 = new BABYLON.PointLight("light2", new BABYLON.Vector3(0, 1, -1), scene);
+            light1.diffuse = new BABYLON.Color3(3, 3, 6);
+	        light1.specular = new BABYLON.Color3(1, 0, 1);
+	        light1.groundColor = new BABYLON.Color3(80, 0.1, 0.8);
+            var light2 = new BABYLON.PointLight("light2", new BABYLON.Vector3(0, 10, 10), scene);
+            light2.diffuse = new BABYLON.Color3(10, 0, 0)
+            light2.intensity = 100000;
+            light2.range = 20000;
 
             // Add and manipulate meshes in the scene
             //var sphere = BABYLON.MeshBuilder.CreateSphere("sphere", {diameter:2}, scene);
@@ -67,6 +79,9 @@
             engine.resize();
         });
 
+        
+
+    
     </script>
     <main>
         <h1>LOREM DOLOREM SIUS EST ON</h1>
