--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 </head>
 <body>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a class="active" href="about.html">about</a></li>
+            <li><a href="archive.html">archive</a></li>
+            <li><a href="manifest.html">manifest</a></li>
+            <li><a href="gallery.html">gallery</a></li>
+        </ul>
+    </nav>
+
     <canvas id="renderCanvas" touch-action="none"></canvas> <!-- touch-action="none" for best results from PEP-->
 
     <!-- actual bjs script -->
