--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a class="active" href="about.html">about</a></li>
+            <li><a class="active" href="index.html">home</a></li>
+            <li><a href="about.html">about</a></li>
             <li><a href="archive.html">archive</a></li>
             <li><a href="manifest.html">manifest</a></li>
             <li><a href="gallery.html">gallery</a></li>
