removed canvas element on mobile

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis pariatur inventore quidem rem blanditiis tempora expedita fuga impedit cupiditate quisquam consectetur ab dolorum delectus nobis modi, a similique in eos?</span>
     </main>
     <footer>
-        <a href="https://instagram.com/_thenode43"><p>code by node43</p></a>
+        <a href="https://instagram.com/_thenode43"><p>code by_</p><p> node43</p></a>
     </footer>
     
 </body>
