removed touch-action=none

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
     
 
-    <canvas id="renderCanvas" touch-action="none"></canvas> <!-- touch-action="none" for best results from PEP-->
+    <canvas id="renderCanvas"></canvas> <!-- touch-action="none" for best results from PEP-->
     
     <!-- actual bjs script -->
     <script>
