--- a/about.html
+++ b/about.html
@@ -17,15 +17,8 @@
         </ul>
     </nav>
     <main>
-        <h1>LOREM DOLOREM SIUS EST ON</h1>
-        <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, facilis. Sed numquam cupiditate iste nemo quas consectetur harum officiis, qui distinctio sunt asperiores voluptates facilis blanditiis quae nisi laboriosam soluta.</span>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet neque mollitia repellat quidem voluptates deleniti corrupti! Placeat fuga voluptates quo quaerat nesciunt ab est quod repudiandae perferendis, eveniet, esse nihil.
-        Numquam reprehenderit nulla aliquid earum unde excepturi aut eos culpa voluptatibus nobis ullam aliquam ducimus voluptate velit iste adipisci similique, ratione perspiciatis dignissimos alias debitis distinctio vero quos consequuntur? Maiores.
-        Odio asperiores recusandae sunt pariatur deleniti aspernatur molestiae doloribus eius sequi natus nihil quisquam debitis deserunt magni eaque laborum placeat qui vero itaque quo reiciendis illo excepturi, magnam inventore! Doloribus?
-        Sunt magnam ab recusandae laboriosam aspernatur tenetur dicta, cum consequuntur impedit dolore rem, facilis eum id aliquid error? Odit itaque nam corporis est! Nam quae dolorem asperiores exercitationem esse quod?</span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis quam, eveniet veritatis architecto unde reprehenderit aliquam deserunt inventore? Delectus exercitationem nesciunt alias tempore dolores optio? Minus earum ea vel unde?Ut accusantium autem ad illo sequi eius architecto et debitis minima culpa neque maxime quisquam reprehenderit ducimus sunt, modi ex, quas sit perspiciatis consequuntur ipsum deserunt. Quo dolore commodi tempore?</span>
-        <img src="https://www.louisedrouin.com/gpc/_media/Image/mauritius-maurice-croisiere-ponant-voyage-louise-drouin.jpg" alt="">
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis pariatur inventore quidem rem blanditiis tempora expedita fuga impedit cupiditate quisquam consectetur ab dolorum delectus nobis modi, a similique in eos?</span>
+        <span>Æntity.one.Default je nová kolektivně kurátorovaná platforma propojující současnou nezávislou elektronickou scénu a výtvarné umění. V průběhu každé události se účastníci stanou aktéry dočasně existujícího zvukového side-specific organismu, který žije tak trochu vlastním životem. </span>
+        <span class="eng">Æntity.one.Default is a new collectively curated platform linking the contemporary independent electronic scene and fine art. During each event, the participants will become actors of a temporarily existing sound side-specific organism that lives a bit of its own life.</span>
     </main>
     <footer>
         <a href="https://instagram.com/_thenode43"><p>code by_</p><p> node43</p></a>
