--- a/about.html
+++ b/about.html
@@ -11,9 +11,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a class="active" href="about.html">about</a></li>
-            <li><a href="archive.html">archive</a></li>
-            <li><a href="manifest.html">manifest</a></li>
-            <li><a href="gallery.html">gallery</a></li>
+            <li><a href="event01.html">archive</a></li>
         </ul>
     </nav>
     <main>
