--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
     
-    <audio autoplay>
+    <audio  volume="0.01" autoplay>
         <source src="audio/audio01.mp3">
     </audio>
     <nav>
@@ -120,7 +120,7 @@
                         var pickedMesh = event.meshUnderPointer; 
                         window.location= ("event01.html");
             })
-);
+        );
 
             
 
