--- a/about.html
+++ b/about.html
@@ -15,8 +15,10 @@
         </ul>
     </nav>
     <main>
+        <div>
         <span>Æntity.one.Default je nová kolektivně kurátorovaná platforma propojující současnou nezávislou elektronickou scénu a výtvarné umění. V průběhu každé události se účastníci stanou aktéry dočasně existujícího zvukového side-specific organismu, který žije tak trochu vlastním životem. </span>
         <span class="eng">Æntity.one.Default is a new collectively curated platform linking the contemporary independent electronic scene and fine art. During each event, the participants will become actors of a temporarily existing sound side-specific organism that lives a bit of its own life.</span>
+        </div>
     </main>
     <footer>
         <a href="https://instagram.com/_thenode43"><p>code by_</p><p> node43</p></a>
